--- a/react/1_정리.md
+++ b/react/1_정리.md
@@ -18,3 +18,19 @@
 
 ## 4. React 프로젝트 생성
 - 리액트 사이트 : https://reactjs.org  ---> https://react.dev
+- CSR(Client-Side Rendering)
+- SPA(Single-Page Apps)
+- SSG(Static-Site Generation)
+- SSR(Server-Side Rendering)
+- 프로젝트 생성 : 리액트 프로젝트 or NEXTJS 프레임워크 - 리액트 프로젝트 + SSR
+- 리액트 프로젝트 생성
+  형식 : npx create-react-app@lastest [프로젝트명]
+  예) npx create-react-app@5.1.0 basic-app
+- 프로젝트 실행 : npm start
+  basic-app> npm start
+
+## 5. React App 실행 순서
+- npm start > src/index.js : 출력되는 App 선택 > App.js - SSG(HTML미리 생성)
+  > React DOM(Virtual DOM) > 브라우저 DOM
+
+  
