--- a/react/1_정리.md
+++ b/react/1_정리.md
@@ -33,4 +33,20 @@
 - npm start > src/index.js : 출력되는 App 선택 > App.js - SSG(HTML미리 생성)
   > React DOM(Virtual DOM) > 브라우저 DOM
 
-  
+## 6. 컴포넌트(Component)
+- UI를 구성하는 함수 컴포넌트
+- 첫 글자는 대문자로 정의
+- return 키워드 다음은 반드시 () 묶어준다.
+- return 코드는 하나로 그룹핑되어 반환된다.
+  예) <div>~</div>, <> ~</>...
+- 로직을 포함하는 코드는 {}로 묶어준다.
+
+## 7. 프롭스(Props)
+- 부모 컴포넌트가 자식 컴포넌트에게 데이터를 전달하는 방식
+- 전달하는 객체는 Object Literal({property:value...}) 타입
+- 자식은 참조객체변수 혹은 구조분해할당 형식으로 데이터를 매핑
+- props는 읽기 전용 객체로 자식이 수정할 수 없음
+- 부모 -->  자식 : 단방향 작업만 가능(One-way data flow) 
+- 부모 <--  자식 : 이벤트 콜백함수 형태로 전달함
+
+
