--- a/react/shoppy-app-redux/리덕스 정리.md
+++ b/react/shoppy-app-redux/리덕스 정리.md
@@ -29,6 +29,11 @@ store ---- useSelector -------------------------------------------> 컴포넌트
 npm i react-redux
 npm i @reduxjs/toolkit
 
+## 리덕스 툴킷 사용 가이드
+- https://redux-toolkit.js.org/tutorials/quick-start
+
+
+
 
 
 
