--- a/react/shoppy-app-redux/리덕스 정리.md
+++ b/react/shoppy-app-redux/리덕스 정리.md
@@ -44,5 +44,12 @@ npm i @reduxjs/toolkit
 상품    dispatch ---------------미들웨어(로깅,인증..)------------------------- 스토어 
 
 
+1000미터 달리기
+홍길동-------------------500미터(이름확인)--------------------------->
+이순신-------------------500미터(이름확인)--------------------------->
+김유신-------------------500미터(이름확인)--------------------------->
+
+
+
 
 
